--- a/lesson_2/style.css
+++ b/lesson_2/style.css
@@ -1,17 +1,20 @@
 table {
     border: 1px solid;
-    width: 100%;
+    width: 90%;
+    border-color: black;
 }
 
 th {
     background-color: #e3e3fd;
     font-weight: normal;
-
     border: 1px solid;
+    border-color: black;
+    color: brown;
 }
 
 td {
     border: 1px solid;
+    border-color: black;
 }
 
 .main-tags {
@@ -23,10 +26,7 @@ td {
     color: brown;
 }
 
-.th-color {
-    color: brown;
-}
-
 .title {
     font-weight: bold;
+    text-transform: uppercase;
 }
