--- a/lesson_4/style.css
+++ b/lesson_4/style.css
@@ -1,49 +1,193 @@
+body {
+    background-color: rgb(245, 245, 245);
+}
+
+.main {
+    position: absolute;
+    height: 820px;
+    left: 15%;
+    right: 7%;
+    top: 130px;
+    width: 1300px;
+}
+
 h1 {
     position: absolute;
     height: 51px;
     left: 0%;
-    right: 52.83%;
-    top: calc(50% - 51px/2 - 9.86px);
-    font-family: 'Fraunces';
-    font-style: normal;
-    font-weight: 400;
+    right: 52%;
+    top: 10%;
     font-size: 42px;
-    line-height: 50px;
-    letter-spacing: 0.2px;
-    color: #1F1F1F;
+    font-weight: 400;
+}
+
+h2 {
+    position: absolute;
+    height: 63px;
+    left: 6%;
+    right: 5%;
+    top: 25px;
+    font-size: 25px;
+    width: 350px;
+    font-weight: 400;
+}
+
+.header {
+    position: absolute;
+    height: 68px;
+    left: 4%;
+    right: 4%;
 }
 
 .all-posts {
     position: absolute;
     width: 110px;
     height: 27px;
-    left: calc(50% - 110px/2);
-    top: calc(50% - 27px/2);
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
+    left: 85%;
+    top: 55%;
     font-size: 17px;
-    line-height: 27px;
     text-align: center;
-    letter-spacing: 0.2px;
     color: #0070A0;
 }
 
-.main {
+.content {
     position: absolute;
-    height: 587px;
-    width: 1230px;
+    height: 486px;
+    left: 4%;
+    right: 4%;
+    top: 130px;
+}
+
+.block-first {
+    position: absolute;
+    height: 487px;
+    left: 0%;
+    right: 65%;
+    top: 0px;
+    background: white;
+    width: 355px;
+}
+
+.block-second {
+    position: absolute;
+    height: 487px;
+    left: 34%;
+    right: 33%;
+    top: 0px;
+    background: white;
+    width: 355px;
+}
+
+.block-third {
+    position: absolute;
+    height: 487px;
+    left: 67%;
+    right: 0%;
+    top: 0px;
+    background: white;
+    width: 355px;
+}
+
+img {
+    position: absolute;
+    height: 238px;
+    left: 0%;
+    right: 0%;
+    top: 0;
+    border-radius: 0px;
+}
+
+body {
+    position: absolute;
+    height: 1080px;
     left: 0%;
     right: 0%;
     top: 0px;
     border-radius: 0px;
+    align-items: center;
 }
 
-span {
-    display: block;
+.blue-text-1 {
+    position: absolute;
+    height: 22px;
+    left: 6%;
+    right: 61%;
+    top: 15px;
+    background-color: rgb(190, 232, 246);
+    width: 85px;
 }
 
-.smarter {
-    width: 553px;
-    height: 51px;
+.blue-text-2 {
+    position: absolute;
+    height: 22px;
+    left: 6%;
+    right: 61%;
+    top: 15px;
+    background-color: rgb(190, 232, 246);
+    width: 90px;
+}
+
+.blue-text-3 {
+    position: absolute;
+    height: 22px;
+    left: 6%;
+    right: 61%;
+    top: 15px;
+    background-color: rgb(190, 232, 246);
+    width: 60px;
+}
+
+.blue-text-text-1 {
+    position: absolute;
+    width: 88px;
+    height: 16px;
+    top: -8px;
+    font-size: 12px;
+    color: #2C90C9;
+    left: 10%;
+}
+
+.blue-text-text-2 {
+    position: absolute;
+    width: 88px;
+    height: 16px;
+    top: -8px;
+    font-size: 12px;
+    color: #2C90C9;
+    left: 15%;
+}
+
+.blue-text-text-3 {
+    position: absolute;
+    width: 88px;
+    height: 16px;
+    top: -8px;
+    font-size: 12px;
+    color: #2C90C9;
+    left: 28%;
+}
+
+.content-content {
+    position: absolute;
+    height: 249px;
+    top: 237.98px;
+    width: 335px;
+}
+
+
+.content-text {
+    position: absolute;
+    height: 59px;
+    left: 7%;
+    top: 100px;
+    font-size: 14px;
+}
+
+.footer {
+    position: absolute;
+    height: 19px;
+    right: 3%;
+    top: 185.02px;
+    width: 300px;
+    font-size: 12px;
 }
