--- a/lesson_4/style.css
+++ b/lesson_4/style.css
@@ -91,8 +91,8 @@ h2 {
 img {
     position: absolute;
     height: 238px;
-    left: 0%;
-    right: 0%;
+    left: 0;
+    right: 0;
     top: 0;
     border-radius: 0px;
 }
@@ -100,8 +100,8 @@ img {
 body {
     position: absolute;
     height: 1080px;
-    left: 0%;
-    right: 0%;
+    left: 0;
+    right: 0;
     top: 0px;
     border-radius: 0px;
     align-items: center;
