--- a/lesson_4/styles/style.css
+++ b/lesson_4/styles/style.css
@@ -29,10 +29,6 @@
     font-size: 17px;
 }
 
-a {
-    text-decoration: none;
-}
-
 .content {
     width: 1130px;
     height: 490px;
@@ -73,8 +69,6 @@ img {
 
 .card-href {
     color: #2C90C9;
-}
-
-.href3 {
-    background: #2C90C9;
+    display: inline-block;
+    background-color: #E6F7FF;
 }
